# katha

./: .env.example  .gitignore  CLAUDE.md  Katha Marketecture.html  Makefile  SPEC.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  conftest.py  main.py  pyproject.toml  requirements.txt
backend/adapters/: llm.py  sarvam_stt.py  sarvam_tts.py  whatsapp.py  whatsapp_stub.py
backend/core/: auth.py  conversation_policy.py  freemium.py  orchestrator.py  session_manager.py
backend/extraction/: entity_extractor.py  story_extractor.py
backend/media/: storage.py
backend/memory/: fact_store.py  vector_store.py
backend/memory_cards/: generator.py
backend/migrations/: env.py
backend/models/: consent_record.py  db.py  fact.py  family_account.py  magic_link_token.py  memory_card.py  session.py  story_atom.py  user_profile.py
backend/prompts/: domains.py  system_prompt.py
backend/scheduler/: session_initiator.py
backend/tests/: test_auth.py  test_auth_routes.py  test_conversation.py  test_conversation_policy.py  test_data_deletion.py  test_domains.py  test_entity_extractor.py  test_fact_store.py  test_family_api.py  test_freemium.py  test_health.py  test_llm.py  test_memory_card_generator.py  test_onboarding.py  test_orchestrator_phase2.py  test_orchestrator_phase3.py  test_orchestrator_phase5.py  test_sarvam_stt.py  test_sarvam_tts.py  test_session_initiator.py  test_session_manager.py  test_storage.py  test_story_extractor.py  test_system_prompt.py  test_vector_store.py  test_webhook.py  test_whatsapp_adapter.py
docs/: PLAN.md  (+2 more)
(+42 files in other folders)
